--- a/src/app/company/create/create.component.html
+++ b/src/app/company/create/create.component.html
@@ -263,6 +263,15 @@
                                                 </div>
                                             </div>
                                             <div class="row">
+                                                <label class="col-md-3 col-form-label">Your Contact</label>
+                                                <div class="col-md-9">
+                                                    <div class="form-group">
+                                                        <input type="text" [(ngModel)]="phoneNumber" name="enterprise_location"
+                                                            class="form-control" placeholder="e.g. 0736343900">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="row">
                                                 <label class="col-md-3 col-form-label">Address</label>
                                                 <div class="col-md-9">
                                                     <div class="form-group">
@@ -281,7 +290,7 @@
                                                 </div>
                                             </div>
                                             <div class="row">
-                                                <label class="col-md-3 col-form-label">Nation</label>
+                                                <label class="col-md-3 col-form-label">Country</label>
                                                 <div class="col-md-9">
                                                     <div class="form-group">
                                                         <input type="text" [(ngModel)]="compUser.nation" name="enterprise_location"
