--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,8 +7,8 @@
           <div class="col-sm-12 ml-auto mr-auto" style="padding-bottom: -1em ">
             <div class="clrs-h1" style="color:steelblue">
               <a><i class="nc-icon nc-palette"></i> Colours Personal</a>
-            </div><br>
-            <div class="text-left col-md-10" style="padding-top: -1em; color: steelblue; ">
+            </div>
+            <div class="text-left col-md-10 category" style=" color: steelblue; ">
               <a>My Diary Today</a>
             </div>
           </div>
@@ -85,7 +85,7 @@
           <hr>
           <div class="row">
             <div class="col-sm-7">
-              <div class="footer-title">View more details</div>
+              <div class="footer-title">View more.....</div>
             </div>
             <div class="col-sm-5">
               <div class="pull-right">
@@ -104,8 +104,8 @@
           <div class="col-sm-12 ml-auto mr-auto" style="padding-bottom: -1em ">
             <div class="clrs-h1" style="color:steelblue">
               <a><i class="fa fa-tasks fa-fw"></i> Colours Projects</a>
-            </div><br>
-            <div class="text-left" style="padding-top: -1em; color: steelblue; ">
+            </div>
+            <div class="text-left category" style="margin-left:1.0em; color: steelblue; ">
               <a>My Current Priority Projects</a>
             </div>
           </div>
@@ -172,7 +172,7 @@
           <hr>
           <div class="row">
             <div class="col-sm-7">
-              <div class="footer-title">View more details</div>
+              <div class="footer-title">View more.....</div>
             </div>
             <div class="col-sm-5">
               <div class="pull-right">
@@ -207,8 +207,8 @@
           <div class="col-sm-12 ml-auto mr-auto" style="padding-bottom: -1em ">
             <div class="clrs-h1" style="color:steelblue">
               <a><i class="fa fa-briefcase fa-fw"></i> Colours Enterprise</a>
-            </div><br>
-            <div class="text-left" style="padding-top: -1em; color: steelblue; ">
+            </div>
+            <div class="text-left category" style="margin-left:1.0em; color: steelblue; ">
               <a>High Priority Enterprise Tasks</a>
             </div>
           </div>
@@ -263,7 +263,7 @@
           <hr>
           <div class="row">
             <div class="col-sm-7">
-              <div class="footer-title">View more details</div>
+              <div class="footer-title">View more.....</div>
             </div>
             <div class="col-sm-5">
               <div class="pull-right">
