--- a/src/app/company/enterprise-profile/enterprise-profile.component.html
+++ b/src/app/company/enterprise-profile/enterprise-profile.component.html
@@ -72,10 +72,10 @@
                           <div class="row col-sm-12 ml-auto mr-auto" style="padding-bottom: -1em ">
                             <div class="clrs-h4 col-md-12" style="color:steelblue">
                               <a><i class="nc-icon nc-palette"></i> Colours Personal</a>
-                            </div><br>
-                            <div class="col-md-112">
+                            </div>
+                            <!-- <div class="col-md-12">
                               <div *ngIf="company">
-                                <!-- class="card" -->
+                                <!- class="card" ->
                                 <div class="card-header">
                                   <h6 class="card-category">
                                     Tasks I'm Champion : {{ (tasksImChamp | async)?.length }} <small>{{ (tasksImChamp
@@ -85,9 +85,8 @@
                                   </h6>
                                 </div>
                               </div>
-                            </div>
-                            <div class="text-left col-md-10" style="padding-top: -1em; color: steelblue; ">
-                              <div class="spacer" style="height: 1em;"></div>
+                            </div> -->
+                            <div class="text-left col-md-10 category" style="margin-left: 1em; color: steelblue; ">
                               <a>My Diary Today</a>
                             </div>
                           </div>
@@ -98,7 +97,7 @@
                                 <li>
                                   <div class="row">
                                     <div class="col-sm-12" style="margin-left:1.0em; margin-right:-.5em">
-                                      <a style="color:lightgrey">
+                                      <a style="color:lightgrey" class="text-info">
                                         Meeting<span class="label text-warning"> 1000 hrs</span>
                                       </a>
                                     </div>
@@ -107,7 +106,7 @@
                                 <li>
                                   <div class="row">
                                     <div class="col-sm-12" style="margin-left:1.0em; margin-right:-1em">
-                                      <a style="color:lightgrey">
+                                      <a style="color:lightgrey" class="text-info">
                                         Email<span class="label text-success"> 1230 Hrs </span>
                                       </a>
                                     </div>
@@ -116,7 +115,7 @@
                                 <li>
                                   <div class="row">
                                     <div class="col-sm-12" style="margin-left:1.0em; margin-right:-1em">
-                                      <a style="color:lightgrey; margin-bottom: 0px;">
+                                      <a style="color:lightgrey; margin-bottom: 0px;" class="text-info">
                                         Skype<span class="label text-success"> 1400 Hrs </span>
                                       </a>
                                     </div>
@@ -143,7 +142,7 @@
                           <hr>
                           <div class="row">
                             <div class="col-sm-7">
-                              <div class="footer-title">Financial Statistics</div>
+                              <div class="footer-title">View more.....</div>
                             </div>
                             <div class="col-sm-5">
                               <div class="pull-right">
@@ -162,10 +161,10 @@
                           <div class="row col-sm-12 ml-auto mr-auto" style="padding-bottom: -1em ">
                             <div class="clrs-h4" style="color:steelblue">
                               <a><i class="fa fa-tasks fa-fw"></i> Colours Enterprise</a>
-                            </div><br>
-                            <div class="col-md-112">
+                            </div>
+                            <!-- <div class="col-md-12">
                               <div *ngIf="company">
-                                <!-- class="card" -->
+                                <!- class="card" ->
                                 <div class="card-header">
                                   <h6 class="card-category">
                                     Company : {{ company.name }}<br>
@@ -175,8 +174,8 @@
                                   </h6>
                                 </div>
                               </div>
-                            </div>
-                            <div class="text-left" style="padding-top: -1em; color: steelblue; ">
+                            </div> -->
+                            <div class="text-left category" style="margin-left: 1em; color: steelblue; ">
                               <a>My Current Priority Projects</a>
                             </div>
                           </div>
@@ -186,8 +185,8 @@
                               <li>
                                 <div class="row">
                                   <div class="col-xs-10 " style="margin-left:2.0em">
-                                    <a class="text-danger" style="color:lightgrey" href="#send_agenda">
-                                      Joina City
+                                    <a class="text-info" style="color:lightgrey" href="#send_agenda">
+                                      Project 1
                                     </a>
                                   </div>
                                 </div>
@@ -195,8 +194,8 @@
                               <li>
                                 <div class="row">
                                   <div class="col-xs-10 " style="margin-left:2.0em">
-                                    <a class="text-danger" style="color:lightgrey" href="#send_agenda">
-                                      Aripo Offices
+                                    <a class="text-info" style="color:lightgrey" href="#send_agenda">
+                                      Project 2
                                     </a>
                                   </div>
                                 </div>
@@ -204,8 +203,8 @@
                               <li>
                                 <div class="row">
                                   <div class="col-xs-10 " style="margin-left:2.0em">
-                                    <a class="text-danger" style="color:lightgrey" href="#send_agenda">
-                                      Colours Software
+                                    <a class="text-info" style="color:lightgrey" href="#send_agenda">
+                                      Project 3
                                     </a>
                                   </div>
                                 </div>
@@ -213,8 +212,8 @@
                               <li>
                                 <div class="row">
                                   <div class="col-xs-10 " style="margin-left:2.0em">
-                                    <a class="text-danger" style="color:lightgrey" href="#send_agenda">
-                                      Beitbridge
+                                    <a class="text-info" style="color:lightgrey" href="#send_agenda">
+                                      Project 4
                                     </a>
                                   </div>
                                 </div>
@@ -230,7 +229,7 @@
                           <hr>
                           <div class="row">
                             <div class="col-sm-7">
-                              <div class="footer-title">View all members</div>
+                              <div class="footer-title">View more.....</div>
                             </div>
                             <div class="col-sm-5">
                               <div class="pull-right">
@@ -249,9 +248,9 @@
                           <div class="row col-sm-12 ml-auto mr-auto" style="padding-bottom: -1em ">
                             <div class="clrs-h4" style="color:steelblue">
                               <a><i class="fa fa-feed  fa-flip-vertical fa-fw"></i> {{ (company)?.name }} News</a>
-                            </div><br>
-                            <div class="text-left" style="padding-top: -1em; color: steelblue;font-size: 2 ">
-                              <a>High Priority Enterprise Tasks</a>
+                            </div>
+                            <div class="text-left category" style="margin-left: 1em; color: steelblue;font-size: 2 ">
+                              <a>All your {{ (company)?.name }} News</a>
                             </div>
                           </div>
                           <div class="spacer" style="height: 1em;"></div>
@@ -309,7 +308,7 @@
                           <hr>
                           <div class="row">
                             <div class="col-sm-7">
-                              <div class="footer-title">View more details</div>
+                              <div class="footer-title">View more.....</div>
                             </div>
                             <div class="col-sm-5">
                               <div class="pull-right">
