--- a/src/app/company/enterprise-profile/enterprise-profile.component.html
+++ b/src/app/company/enterprise-profile/enterprise-profile.component.html
@@ -4086,7 +4086,7 @@
         </div>
         <div class="divider"></div>
         <div class="right-side">
-          <button type="button" class="btn btn-link btn-link" data-dismiss="modal" (click)="joinProject(project)">Confirm</button>
+          <button type="button" class="btn btn-link btn-link" data-dismiss="modal" (click)="joinProject()">Confirm</button>
         </div>
       </div>
     </div>
