--- a/src/app/projects/view/view.component.html
+++ b/src/app/projects/view/view.component.html
@@ -2915,7 +2915,7 @@
             </div>
             <div class="divider"></div>
             <div class="right-side">
-              <button type="button" class="btn btn-success btn-link" (click)="newAction(startDate,endDate)"
+              <button type="button" class="btn btn-success btn-link" (click)="newAction()"
                 data-dismiss="modal" title="save action">Enter</button>
             </div>
           </div>
