--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -283,114 +283,7 @@
   </div>
 </div>
 
-<!-- <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button> -->
 
-<!-- <ng-template #content let-modal class="modal-lg">
-  <div class="modal-header">
-    <div class="row">
-      <div class="card col-md-12">
-        <div class="row">
-          <div class="col-md-4">
-            <p class="na-p">Your ToDo List Diary</p>
-          </div>
-          <div class="col-md-4 text-left">
-            <p class="clrs-h4 text-center"><span id="thrs">{{ nHrs }} </span>: <span id="tmins">{{ nMin }} </span>: <span>{{
-                nSecs }}</span></p>
-          </div>
-          <div class="col-md-4 text-right">Today`s Overview</div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal-body">
-    <form>
-      <p class="category text-left" style="margin-bottom:-1em; padding-left: 25px;">
-        Click on the task to Enter the Actuals
-      </p><br>
-      <div id="Datasc1" role="tab" aria-multiselectable="true" class="card-collapse">
-        <ol style="padding-left: 0px;">
-          <li class="" style="color:steelblue" *ngFor="let action of myActionItems">
-            <div class="card card-plain" *ngIf="action.champion.id == userId; else showNonChampField">
-              <div class="card-header" role="tab" id="dataHeading">
-                <a class="collapsed row col-md-12" data-toggle="collapse" href="#{{ action.id }}" (click)="selectAction(action)"
-                  aria-expanded="false" aria-current="false">
-                  <span class="label text-info card-category" style="width: 20em;">{{ action.name }}
-                    <span style="width: 10em;" class="pull-right"><small *ngIf="action.targetQty">Target
-                        <span class="label text-warning">{{ action.targetQty }} {{ action.unit }}</span></small>
-                      <i class="nc-icon nc-minimal-down"></i>
-                    </span>
-                  </span>
-                </a>
-              </div>
-              <div id="{{ action.id }}" bame="popup" class="collapse" data-parent="#Datasc1" role="tabpanel" aria-labelledby="dataHeading">
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col-sm-9">
-                      <p class="category text-left" style="margin-bottom: 0px;">Enter Actual Measurements </p>
-                      <div class="form-group">
-                        <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
-                          <input type="number" name="actData" class="form-control panel-boader" [(ngModel)]="dmData.qty" style=" padding-left: 10px; padding-right: 10px; height:2em"
-                            placeholder="Enter Data" />
-                          <div class="input-group-postpend">
-                            <span class="input-group-text" style=" padding-left: 10px; padding-right: 10px; height:28px">
-                              <small>{{ action.unit }}</small>
-                            </span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-2 card-category">
-                      <button class="btn-link btn-round primary" (click)="saveActual(dmData)" style="margin-top: 11px">
-                        <small> Save </small>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <ng-template #showNonChampField>
-              <div class="row">
-                <div class="col-md-9 text-info">
-                  {{ action.name }}
-                </div>
-                <div class="col-md-3" style="padding-top: 5px;">
-                  <input class="card-category col-form-label" type="checkbox" (change)="updateAction($event, action)">
-                </div>
-              </div>
-            </ng-template>
-          </li>
-        </ol>
-      </div>
-    </form>
-    <form>
-      <code> add new work item</code>
-      <div class="form-group">
-        <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
-          <input type="text" class="form-control panel-boader" [(ngModel)]="item.name" name="unplannedWork"  style=" padding-left: 10px; padding-right: 10px; height:2em"
-            placeholder="Enter current unplanned activity" />
-          <div class="input-group-postpend">
-            <span class="input-group-text" style=" padding-left: 10px; padding-right: 10px; height:28px">
-              <small>
-                <button class="" (click)="unPlannedTAsk(item)" title="Add item" style="padding-top: 0px; padding-bottom: 0px; cursor: pointer;">
-                  Add
-                </button>
-              </small>
-            </span>
-          </div>
-        </div>
-      </div>
-    </form>
-  </div>
-  <div class="modal-footer">
-    <button class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>
-    <button class="btn btn-lg btn-outline-primary" data-dismiss="modal">Close</button>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-</ng-template> -->
 
 <ng-template #content let-modal class="modal-lg">
   <div class="modal-header">
@@ -412,52 +305,25 @@
   </div>
   <div class="modal-body"><!--  style="background-color: #d9dee0; color: white;" -->
     <div class="row">
-      <div class="col-md-10 ml-auto mr-auto" *ngIf="myActionItems != 0">
+      <div class="col-md-10 ml-auto mr-auto" *ngIf="actiondsNo != 0">
         <form>
           <p class="category text-left" style="margin-bottom:-1em; padding-left: 25px;">
-            Click on the task to Enter the Actuals
+            Click on the current Task
           </p><br>
           <div id="Datasc1" role="tab" aria-multiselectable="true" class="card-collapse">
-            <ol style="padding-left: 0px;">
-              <li class="" style="color:steelblue" *ngFor="let action of myActionItems">
+            <ul style="list-style-type:none">
+              <li style="color:steelblue" *ngFor="let action of myActionItems">
                 <div class="card card-plain" *ngIf="action.champion.id == userId; else showNonChampField">
-                  <div class="card-header" role="tab" id="dataHeading">
-                    <a class="collapsed row col-md-12" data-toggle="collapse" href="#{{ action.id }}" (click)="selectAction(action)"
-                      aria-expanded="false" aria-current="false">
-                      <span class="label text-info card-category" style="width: 20em;">{{ action.name }}
+                  <!-- <div  role="tab" id="dataHeading"> -->
+                    <button class="form-control panel-boader clrs-cell btn-link text-left" style="padding-top: 2px; padding-left: 10px; padding-right: 10px; height:2em" (click)="upDateTime(action)"><!-- {{ item.name }} -->
+                        <span class="label text-warning card-category col-md-3" style="width: 20em;">{{ action.start }}</span>
+                        <span class="label text-info card-category col-md-9 ml-auto mr-auto" style="width: 20em;">{{ action.name }}
                         <span style="width: 10em;" class="pull-right"><small *ngIf="action.targetQty">Target
                             <span class="label text-warning">{{ action.targetQty }} {{ action.unit }}</span></small>
-                          <i class="nc-icon nc-minimal-down"></i>
                         </span>
                       </span>
-                    </a>
-                  </div>
-                  <div id="{{ action.id }}" bame="popup" class="collapse" data-parent="#Datasc1" role="tabpanel"
-                    aria-labelledby="dataHeading">
-                    <div class="card-body">
-                      <div class="row">
-                        <div class="col-sm-9">
-                          <p class="category text-left" style="margin-bottom: 0px;">Enter Actual Measurements </p>
-                          <div class="form-group">
-                            <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
-                              <input type="number" name="actData" class="form-control panel-boader" [(ngModel)]="dmData.qty"
-                                style=" padding-left: 10px; padding-right: 10px; height:2em" placeholder="Enter Data" />
-                              <div class="input-group-postpend">
-                                <span class="input-group-text" style=" padding-left: 10px; padding-right: 10px; height:28px">
-                                  <small>{{ action.unit }}</small>
-                                </span>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-sm-2 card-category">
-                          <button class="btn-link btn-round primary" (click)="saveActual(dmData)" style="margin-top: 11px">
-                            <small> Save </small>
-                          </button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                    </button>
+                  <!-- </div> -->
                 </div>
                 <ng-template #showNonChampField>
                   <div class="row">
@@ -470,7 +336,7 @@
                   </div>
                 </ng-template>
               </li>
-            </ol>
+            </ul>
           </div>
         </form>
         <form>
@@ -492,11 +358,11 @@
           </div>
         </form>
       </div>
-      <div class="col-md-10 ml-auto mr-auto" *ngIf="myActionItems == 0">
+      <div class="col-md-10 ml-auto mr-auto" *ngIf="actiondsNo == 0">
         You have nothing in your Diary Today <br>
         <p class="category">To add Goto the Implementation Page on either Colours Personal, your enterprise in Colours Enterprises or existing Project Colours Projects dropdown</p>
       </div>
-      <div class="col-md-10 ml-auto mr-auto" *ngIf="myActionItems == 0">
+      <div class="col-md-10 ml-auto mr-auto" *ngIf="actiondsNo == 0">
         <form>
           <code> add new work item</code>
           <div class="form-group">
